log
mi., 15 de feb. de 2023 12:35:23: 
 tests:  0|6
total_score: 0/70
7964391
Fri 31 Mar 2023 11:23:43 AM UTC: 
 arraylist.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  0|6
total_score: 0/70
71ee269
Fri 31 Mar 2023 11:25:16 AM UTC: 
 arraylist.c | 10 +++++++++-
 1 file changed, 9 insertions(+), 1 deletion(-)
 tests:  0|6
total_score: 0/70
b5ce2f3
Fri 31 Mar 2023 11:26:17 AM UTC: 
 arraylist.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
arraylist.c: In function ‘createList’:
arraylist.c:19:33: error: ‘capacity’ undeclared (first use in this function)
   19 |   void **datos = (void*)realloc(capacity * sizeof(void));
      |                                 ^~~~~~~~
arraylist.c:19:33: note: each undeclared identifier is reported only once for each function it appears in
arraylist.c:19:25: error: too few arguments to function ‘realloc’
   19 |   void **datos = (void*)realloc(capacity * sizeof(void));
      |                         ^~~~~~~
In file included from test.c:2:
/nix/store/4pqv2mwdn88h7xvsm7a5zplrd8sxzvw0-glibc-2.35-163-dev/include/stdlib.h:551:14: note: declared here
  551 | extern void *realloc (void *__ptr, size_t __size)
      |              ^~~~~~~
Compilation failed
09317b8
Fri 31 Mar 2023 11:26:42 AM UTC: 
 arraylist.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
arraylist.c: In function ‘createList’:
arraylist.c:19:47: error: passing argument 1 of ‘realloc’ makes pointer from integer without a cast [-Werror=int-conversion]
   19 |   void **datos = (void*)realloc(aux->capacity * sizeof(void));
      |                                 ~~~~~~~~~~~~~~^~~~~~~~~~~~~~
      |                                               |
      |                                               long unsigned int
In file included from test.c:2:
/nix/store/4pqv2mwdn88h7xvsm7a5zplrd8sxzvw0-glibc-2.35-163-dev/include/stdlib.h:551:29: note: expected ‘void *’ but argument is of type ‘long unsigned int’
  551 | extern void *realloc (void *__ptr, size_t __size)
      |                       ~~~~~~^~~~~
In file included from test.c:5:
arraylist.c:19:25: error: too few arguments to function ‘realloc’
   19 |   void **datos = (void*)realloc(aux->capacity * sizeof(void));
      |                         ^~~~~~~
In file included from test.c:2:
/nix/store/4pqv2mwdn88h7xvsm7a5zplrd8sxzvw0-glibc-2.35-163-dev/include/stdlib.h:551:14: note: declared here
  551 | extern void *realloc (void *__ptr, size_t __size)
      |              ^~~~~~~
cc1: all warnings being treated as errors
Compilation failed
21b1b82
Fri 31 Mar 2023 11:27:03 AM UTC: 
 arraylist.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
arraylist.c: In function ‘createList’:
arraylist.c:19:36: error: passing argument 1 of ‘realloc’ makes pointer from integer without a cast [-Werror=int-conversion]
   19 |   void **datos = (void*)realloc(aux->capacity, sizeof(void));
      |                                 ~~~^~~~~~~~~~
      |                                    |
      |                                    int
In file included from test.c:2:
/nix/store/4pqv2mwdn88h7xvsm7a5zplrd8sxzvw0-glibc-2.35-163-dev/include/stdlib.h:551:29: note: expected ‘void *’ but argument is of type ‘int’
  551 | extern void *realloc (void *__ptr, size_t __size)
      |                       ~~~~~~^~~~~
In file included from test.c:5:
arraylist.c:19:36: error: ‘*aux.capacity’ may be used uninitialized [-Werror=maybe-uninitialized]
   19 |   void **datos = (void*)realloc(aux->capacity, sizeof(void));
      |                                 ~~~^~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
c8fd35a
